--- a/package.json
+++ b/package.json
@@ -10,13 +10,22 @@
   },
   "dependencies": {
     "@msgpack/msgpack": "^3.0.0-beta3",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
     "canvas": "^3.0.0-rc3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "konva": "^9.3.18",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.474.0",
+    "motion": "^12.4.1",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-konva": "^19.0.2",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
@@ -30,6 +39,7 @@
     "postcss": "^8",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "shadcn-ui": "^0.9.4",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
